--- a/Quikr Analysis.ipynb
+++ b/Quikr Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "(892, 6)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### good news, there are no-null values, otherwise it would mean that we had to get our hands into cleaning the data"
+    "### good news, there are no-null values, otherwise it would mean that we had to get our hands into fixing null values"
    ]
   },
   {
@@ -96,11 +96,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "backup=car.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>company</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>kms_driven</th>\n",
+       "      <th>fuel_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hyundai Santro Xing XO eRLX Euro III</td>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>80,000</td>\n",
+       "      <td>45,000 kms</td>\n",
+       "      <td>Petrol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mahindra Jeep CL550 MDI</td>\n",
+       "      <td>Mahindra</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>4,25,000</td>\n",
+       "      <td>40 kms</td>\n",
+       "      <td>Diesel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maruti Suzuki Alto 800 Vxi</td>\n",
+       "      <td>Maruti</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Ask For Price</td>\n",
+       "      <td>22,000 kms</td>\n",
+       "      <td>Petrol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hyundai Grand i10 Magna 1.2 Kappa VTVT</td>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>3,25,000</td>\n",
+       "      <td>28,000 kms</td>\n",
+       "      <td>Petrol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ford EcoSport Titanium 1.5L TDCi</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>5,75,000</td>\n",
+       "      <td>36,000 kms</td>\n",
+       "      <td>Diesel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     name   company  year          Price  \\\n",
+       "0    Hyundai Santro Xing XO eRLX Euro III   Hyundai  2007         80,000   \n",
+       "1                 Mahindra Jeep CL550 MDI  Mahindra  2006       4,25,000   \n",
+       "2              Maruti Suzuki Alto 800 Vxi    Maruti  2018  Ask For Price   \n",
+       "3  Hyundai Grand i10 Magna 1.2 Kappa VTVT   Hyundai  2014       3,25,000   \n",
+       "4        Ford EcoSport Titanium 1.5L TDCi      Ford  2014       5,75,000   \n",
+       "\n",
+       "   kms_driven fuel_type  \n",
+       "0  45,000 kms    Petrol  \n",
+       "1      40 kms    Diesel  \n",
+       "2  22,000 kms    Petrol  \n",
+       "3  28,000 kms    Petrol  \n",
+       "4  36,000 kms    Diesel  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backup.head()"
    ]
   },
   {
@@ -138,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2525,7 +2634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
